Moved buffer parsing into a strategy pattern to allow plug and play parsing mechanisms

--- a/logger_daemon/src/buffer_parsing/CMakeLists.txt
+++ b/logger_daemon/src/buffer_parsing/CMakeLists.txt
@@ -7,5 +7,5 @@ add_library(buffer_parsing_lib
 target_include_directories(buffer_parsing_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(buffer_parsing_lib
-    PUBLIC log_writer_lib
+    PUBLIC buffer_parsing_strategies_lib
 )
