--- a/logger_daemon/CMakeLists.txt
+++ b/logger_daemon/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(logger_daemon)
 set(CMAKE_CXX_STANDARD 20)
 
+add_subdirectory(src/buffer_parser_strategies)
 add_subdirectory(src/buffer_parsing)
 add_subdirectory(src/log_writer)
 add_subdirectory(src/input_socket)
