Full wiring and integration of daemon into pyroxene with added cmd line argument parsing in python

--- a/logger_daemon_pyroxene/CMakeLists.txt
+++ b/logger_daemon_pyroxene/CMakeLists.txt
@@ -4,7 +4,9 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../lib")
 
-add_subdirectory(pyroxene_logger_strategy)
+add_subdirectory(pyroxene_logger_parser_strategy)
+add_subdirectory(pyroxene_logger_shutdown_strategy)
+add_subdirectory(test_socket)
 
 find_package(logger_foundry REQUIRED)
 
@@ -14,5 +16,7 @@ add_executable(driver
 
 target_link_libraries(driver
     PRIVATE logger_foundry::logger_foundry
-    PRIVATE pyroxene_logger_strategy_lib
+    PRIVATE pyroxene_logger_parser_strategy_lib
+    PRIVATE pyroxene_logger_shutdown_strategy_lib
+    PRIVATE pyroxene_logger_socket_test_lib
 )
