--- a/logger_daemon_pyroxene/CMakeLists.txt
+++ b/logger_daemon_pyroxene/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(logger_daemon_pyroxene)
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../lib")
+#set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../lib")
 
 add_subdirectory(pyroxene_logger_parser_strategy)
 add_subdirectory(pyroxene_logger_shutdown_strategy)
