--- a/backend_llvm_cpp/CMakeLists.txt
+++ b/backend_llvm_cpp/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(pyroxene_v2_backend)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(src/socket_comm)
 
