--- a/frontend-haskell/stack.yaml
+++ b/frontend-haskell/stack.yaml
@@ -17,6 +17,9 @@
 #
 # snapshot: ./custom-snapshot.yaml
 # snapshot: https://example.com/snapshots/2024-01-01.yaml
+
+#resolver: lts-18.28
+#system-ghc: false
 snapshot:
   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/23/17.yaml
 
